# mas-tree-of-thought

./: README.md  README.zh-CN.md  pyproject.toml  pytest.ini
.cursor/rules/: agent_py_overview.mdc
multi_tool_agent/: .env.example  agent.py  instructions.py  llm_config.py  models.py  validation.py
src/mas_tree_of_thought/: coordinator.py  llm_config.py  specialist_agents.py
tests/: test_coordinator_helpers.py  test_instructions.py  test_llm_config.py  test_models.py  test_validation.py
