[project]
name = "adk-mas-sequential-thinking"
version = "0.1.0"
description = "A multi-agent system coordinated by a root agent (ToT_Coordinator) that manages a Tree of Thoughts (ToT) using an LLM-driven evaluation process to explore potential solutions for complex problems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=0.5.0",
    "litellm>=1.66.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0"
]

[build-system]
requires = ["uv>=0.1.17"]
build-backend = "uv"
backend-path = "."
